# FastAPI-DuckDB

./: README.md  main.py  models.py  pyproject.toml
