[tool.poetry]
name = "fastapi-duckdb"
version = "0.1.0"
description = ""
authors = ["Vicrrs <enricofermi2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.1"
uvicorn = "^0.30.6"
duckdb = "^1.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
